# 084-electra-finance

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: __init__.py  backtest.py  model.py  train.py
rust_examples/: Cargo.toml
rust_examples/examples/: backtest.rs  electra_trading.rs  fetch_data.rs
rust_examples/src/: lib.rs
rust_examples/src/api/: bybit.rs  mod.rs
rust_examples/src/models/: network.rs
rust_examples/src/nlp/: tokenizer.rs
